refactor: refactor api
