# controllers/Asociaciones.js
@@ -3,6 +3,16 @@
 var utils = require('../utils/writer.js');
 var Asociaciones = require('../service/AsociacionesService');
 
+module.exports.createAsociacion = function createAsociacion (req, res, next, body) {
+  Asociaciones.createAsociacion(body)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.getAllAsociaciones = function getAllAsociaciones (req, res, next) {
   Asociaciones.getAllAsociaciones()
     .then(function (response) {
