# controllers/Sesiones.js
@@ -3,6 +3,16 @@
 var utils = require('../utils/writer.js');
 var Sesiones = require('../service/SesionesService');
 
+module.exports.createSesion = function createSesion (req, res, next, body) {
+  Sesiones.createSesion(body)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.getAllSessions = function getAllSessions (req, res, next) {
   Sesiones.getAllSessions()
     .then(function (response) {
